# MovieRating

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
api/: grpc_protobuf_generate.cmake  movie.proto
cmake/: CppKafka.cmake  Doxygen.cmake  FindCppKafka.cmake  Testing.cmake
common/: CMakeLists.txt  expected.h  rapidcsv.h
config/: CMakeLists.txt  ServiceProvider.cpp  config.cpp  config.h
data/: metadata.csv  ratingsdata.json
discovery/: CMakeLists.txt  consul.cpp  consul.h  memory.cpp  memory.h  registry.cpp  registry.h
docker/: docker-compose.yml
metadata/: CMakeLists.txt  application.h  main.cpp  runner.cpp
metadata/config/: application.yml
metadata/controller/: controller.cpp  controller.h
metadata/model/: metadata.h
metadata/repository/: repository.cpp  repository.h
metadata/service/: metadataservice.cpp  metadataservice.h
metadata/service/grpc/: metadata_service.cpp  metadata_service.h
metadata/service/http/: metadata_service.cpp  metadata_service.h
movie/: AppComponent.cpp  Application.cpp  Application.h  CMakeLists.txt  main.cpp  runner.cpp
movie/config/: application.yml
movie/controller/: controller.cpp  controller.h
movie/gateway/: gateway.h  metadata.cpp  metadata.h  rating.cpp  rating.h
movie/gateway/metadata/grpc/: metadata.cpp  metadata.h
movie/gateway/metadata/http/: metadata.cpp  metadata.h
movie/gateway/rating/grpc/: rating.cpp  rating.h
movie/gateway/rating/http/: rating.cpp  rating.h
movie/grpcutil/: grpcutil.cpp  grpcutil.h
movie/model/: movie.h
movie/service/: movieservice.cpp  movieservice.h
movie/service/grpc/: movie_service.cpp  movie_service.h
movie/service/http/: movie_service.cpp  movie_service.h
rating/: CMakeLists.txt  application.h  main.cpp  runner.cpp
rating/config/: application.yml
rating/controller/: controller.cpp  controller.h
rating/ingester/kafka/: ingester.cpp
rating/model/: rating.cpp  rating.h
rating/repository/: IRepository.h  memory.cpp  memory.h
rating/repository/memory/: memory.cpp
rating/repository/postgresql/: postgresql.h
rating/service/: ratingservice.cpp  ratingservice.h
rating/service/grpc/: rating_service.cpp  rating_service.h
rating/service/http/: rating_service.cpp  rating_service.h
rating/test/: CMakeLists.txt
resources/: application.metadata.yml  application.movie.yml  application.rating.yml  movie_application_services.drawio  overview.drawio  service_discovery.drawio
src/common/: CMakeLists.txt  expected.h
src/config/: CMakeLists.txt  config.cpp  config.h  service_provider.cpp  service_provider.h
src/discovery/: CMakeLists.txt  consul.cpp  consul.h  memory.cpp  memory.h  registry.h
src/metadata/: CMakeLists.txt  application.cpp  application.h  main.cpp  runner.cpp  runner.h
src/metadata/config/: application.yml
src/metadata/controller/: controller.cpp  controller.h
src/metadata/model/: metadata.h
src/metadata/repository/: repository.cpp  repository.h
src/metadata/repository/memory/: memory.cpp  memory.h
src/metadata/repository/postgresql/: postgresql.cpp  postgresql.h
src/metadata/service/grpc/: metadata_service.cpp  metadata_service.h
src/metadata/service/http/: metadata_service.cpp
src/metadata/tests/: CMakeLists.txt  metadata_service_tests.cpp  test_application.cpp  test_application.h
src/movie/: Application.cpp  Application.h  CMakeLists.txt  runner.cpp  runner.h
src/movie/controller/: controller.cpp  controller.h
src/movie/gateway/: gateway.h
src/movie/gateway/metadata/grpc/: metadata.cpp  metadata.h
src/movie/gateway/rating/grpc/: rating.cpp  rating.h
src/movie/gateway/rating/http/: rating.cpp  rating.h
src/movie/grpcutil/: grpcutil.cpp  grpcutil.h
src/movie/service/grpc/: movie_service.cpp
src/rating/: CMakeLists.txt  application.cpp  application.h  runner.cpp  runner.h
src/rating/controller/: controller.cpp  controller.h
src/rating/ingester/kafka/: ingester.cpp  ingester.h
src/rating/model/: rating.h
src/rating/repository/: IRepository.h
src/rating/repository/memory/: memory.cpp  memory.h
src/rating/repository/postgresql/: postgresql.cpp  postgresql.h
src/rating/service/grpc/: rating_service.cpp  rating_service.h
src/rating/service/http/: rating_service.cpp  rating_service.h
src/rating/test/: test_kafka.cpp
src/rating/tests/: CMakeLists.txt  kafka_test.cpp  kafka_tests.cpp  rating_service_tests.cpp  test_application.cpp  test_application.h  test_utils.cpp  test_utils.h
